tests/NormalTests/paczka1/fuzzy1/33056564.err
Error in line 3: ebQfT S348 84,5
Error in line 29: b6UT2 S493 87,3
Error in line 31: b6UT2 S348 23,1
